# glow-worm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 30d9a4ca0b49_remove_monthly_allocation_from_sinking_.py  a1b2c3d4e5f6_rename_salary_to_income.py  a2b3c4d5e6f7_add_foreign_currency_to_recurring_bills.py  ae048664c754_create_users_table.py  b2c3d4e5f6a7_add_api_keys_table.py  c3d4e5f6a7b8_add_session_version_to_users.py  c5517c16c6c1_add_income_allocation_recurring_.py  d4e5f6a7b8c9_add_bill_type_to_recurring_bills.py  d5e6f7a8b9c0_mark_bills_category_as_system.py  e5f6a7b8c9d0_seed_transfer_category.py  e6f7a8b9c0d1_add_is_system_to_sinking_funds.py  f6a7b8c9d0e1_add_is_system_to_categories.py  f7a8b9c0d1e2_seed_income_category.py  ff882a43230d_add_all_core_models.py
app/: auth.py  config.py  database.py  main.py  mcp_server.py  middleware.py  models.py  scheduler.py  schemas.py  tasks.py  templating.py
app/cli/: client.py  config.py  main.py
app/routes/: api_keys.py  auth.py  bills.py  budgets.py  categories.py  dashboard.py  income.py  salary.py  sinking_funds.py  spending_history.py  transactions.py  users.py
app/static/: styles.css
app/templates/: api_keys.html  base.html  bills.html  budgets.html  categories.html  dashboard.html  income.html  login.html  salary.html  sinking_fund_detail.html  sinking_funds.html  spending_history.html  transactions.html  users.html
scripts/: create_user.py  seed_data.py
tests/: conftest.py  test_api_keys.py  test_auth.py  test_bills.py  test_budgets.py  test_categories.py  test_cli.py  test_dashboard.py  test_income.py  test_mcp.py  test_salary.py  test_sinking_funds.py  test_spending_history.py  test_tasks.py  test_transactions.py  test_users.py
(+7 files in other folders)
